# agent-orchestrator-api

./: .editorconfig  .env.example  CONTRIBUTING.md  README.md  appspec.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd-backend.yml
app/: __init__.py  main.py
app/agents/: base.py  code_agent.py  content_agent.py  peer_agent.py  registry.py
app/api/v1/: routes_agent.py  routes_health.py  routes_metrics.py  routes_tasks.py
app/core/: config.py  debug.py  errors.py  logging.py  rate_limit.py  redis_client.py  security.py  utils.py
app/db/: mongo.py
app/db/repositories/: agent_runs_repo.py  logs_repo.py  messages_repo.py  sessions_repo.py  tasks_repo.py
app/llm/: base_client.py  openai_client.py
app/llm/tools/: web_search_tool.py
app/models/api/: requests.py  responses.py
app/models/domain/: agent_run.py  message.py  session.py  system_metrics.py  task.py
app/services/: metrics_service.py  orchestration_service.py  session_service.py  task_service.py
app/worker/: async_runner.py  celery_app.py  tasks.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml
docs/: architecture-overview.md  backend-adr-0001-llm-choice.md  backend-adr-0002-queue-architecture.md  code-agent-design.md  config-reference.md  content-agent-design.md  operational-runbook.md
scripts/: before_install.sh  start_application.sh  stop_application.sh
tests/agents/: test_peer_agent_routing.py
tests/api/: test_agent_execute.py
tests/services/: test_task_service.py
