[project]
name = "agent-orchestrator-api"
version = "0.1.0"
description = "Agent Orchestrator backend API."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
license = "MIT"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "motor>=3.7.0",
  "openai>=2.8.1",
  "langgraph>=0.2.0",
  "redis>=5.1.0",
  "celery>=5.6.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.1",
  "prometheus-client>=0.21.0",
  "httpx>=0.27.0",
  "tavily-python>=0.5.0",
  "orjson>=3.10.0",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "black>=24.10.0",
  "mypy>=1.11.0",
  "types-redis>=4.6.0.20241004",
  "types-requests>=2.32.0.20241016",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["tests*", "docker*"]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
